--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -34,11 +34,10 @@
 
         <Button
             android:id="@+id/button"
+            style="@style/Botones"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/blue_button"
             android:text="ENTRAR"
-            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/editText2" />
