--- a/app/src/main/res/layout/menu_activity.xml
+++ b/app/src/main/res/layout/menu_activity.xml
@@ -7,85 +7,78 @@
 
     <Button
         android:id="@+id/btn_actividades"
+        style="@style/Botones"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="64dp"
-        android:backgroundTint="@color/blue_button"
         android:text="ACTIVIDADES"
-        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_sedes"
+        style="@style/Botones"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="64dp"
-        android:backgroundTint="@color/blue_button"
         android:text="SEDES"
-        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_actividades" />
 
     <Button
         android:id="@+id/btn_asignaturas"
+        style="@style/Botones"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="64dp"
-        android:backgroundTint="@color/blue_button"
-        android:hapticFeedbackEnabled="true"
         android:text="ASIGNATURAS"
-        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_sedes" />
 
     <Button
         android:id="@+id/btn_personas"
+        style="@style/Botones"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="64dp"
-        android:backgroundTint="@color/blue_button"
         android:text="PERSONAS"
-        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_asignaturas" />
 
     <Button
         android:id="@+id/btn_mis_datos"
+        style="@style/Botones"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="64dp"
-        android:backgroundTint="@color/blue_button"
         android:text="MIS DATOS"
-        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_personas" />
 
     <Button
         android:id="@+id/btn_salir"
+        style="@style/Botones"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="64dp"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="64dp"
-        android:backgroundTint="@color/blue_button"
         android:text="Salir"
-        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
